# demo-app-python

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  auth.py  config.py  errors.py  main.py  templates.py
tests/: __init__.py  test_health.py  test_webhooks.py
