[project]
name = "zid-fastapi-demo"
version = "0.1.0"
description = "Minimal FastAPI demo for Zid Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.14",
    # ============================================================
    # ZID SDK DEPENDENCY
    # To switch to PyPI, replace the line below with:
    #   zid-sdk-python==X.Y.Z
    # ============================================================
    "zid @ git+https://github.com/zidsa/sdk-python@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",  # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
